# unified-data-platform

./: README.md  pyproject.toml
api_callbacks/: producer.py
aws/: aws_secrets.py
db_events/: producer.py
flink_jobs/: kafka_s3_raw_clickouts.py
infra/: main.tf  provider.tf  variables.tf
platform_events/: producer.py
