[project]
name = "unified-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "boto3>=1.40.30",
    "confluent-kafka[avro,json,protobuf]>=2.11.1",
    "fastavro>=1.12.0",
    "orjson>=3.11.3",
    "simplejson>=3.20.1",
]
